refactor base.ini configuration for improved organization and clarity

--- a/Ender3-Pro/base.ini
+++ b/Ender3-Pro/base.ini
@@ -1,3 +1,5 @@
+ini_use_config                           = all
+
 [config:minimal]
 motherboard                              = BOARD_BTT_SKR_MINI_E3_V2_0
 serial_port                              = 2
@@ -39,12 +41,6 @@ default_retract_acceleration             = 500
 
 s_curve_acceleration                     = on
 
-z_min_probe_uses_z_min_endstop_pin       = off
-
-bltouch                                  = on
-
-nozzle_to_probe_offset                   = {-43, -9, 1.000}
-
 xy_probe_feedrate                        = (133*60)
 z_probe_feedrate_fast                    = (4*60)
 z_probe_feedrate_slow                    = (2*60)
@@ -56,23 +52,8 @@ x_bed_size                               = 235
 y_bed_size                               = 235
 z_max_pos                                = 250
 
-filament_runout_sensor                   = on
-filament_runout_distance_mm              = 7
-filament_motion_sensor                   = on
-
-auto_bed_leveling_bilinear               = on
-
 grid_max_points_x                        = 5
 extrapolate_beyond_grid                  = on
-
-lcd_bed_leveling                         = on
-mesh_edit_menu                           = on
-lcd_bed_tramming                         = on
-
-
-z_safe_homing                            = on
-homing_feedrate_mm_m                     = { (20*60), (20*60), (4*60) }
-
 
 eeprom_settings                          = on
 eeprom_auto_init                         = on
@@ -83,15 +64,30 @@ preheat_1_fan_speed                      = 255
 
 preheat_2_fan_speed                      = 255
 
-nozzle_park_feature                      = on
-
-
 sdsupport                                = on
-
-
 individual_axis_homing_menu              = on
-
 cr10_stockdisplay                        = on
+
+
+[config:bltouch]
+bltouch                                  = on
+z_min_probe_uses_z_min_endstop_pin       = off
+auto_bed_leveling_bilinear               = on
+
+nozzle_to_probe_offset                   = {-43, -9, 1.000}
+
+z_safe_homing                            = on
+homing_feedrate_mm_m                     = { (20*60), (20*60), (4*60) }
+
+lcd_bed_leveling                         = on
+mesh_edit_menu                           = on
+lcd_bed_tramming                         = on
+
+[config:filament_runout_sensor]
+filament_runout_sensor                   = on
+filament_runout_distance_mm              = 7
+filament_motion_sensor                   = on
+nozzle_park_feature                      = on
 
 [config:advanced]
 arc_support                              = off
@@ -102,10 +98,8 @@ controller_fan_editable                  = on
 
 quick_home                               = on
 
-
 probe_offset_wizard                      = on
 lcd_info_menu                            = on
-show_custom_bootscreen                   = on
 
 babystepping                             = on
 doubleclick_for_z_babystepping           = on
