enable z_min_probe_uses_z_min_endstop_pin for improved bed leveling

--- a/Ender3-Pro/base.ini
+++ b/Ender3-Pro/base.ini
@@ -71,7 +71,7 @@ cr10_stockdisplay                        = on
 
 [config:bltouch]
 bltouch                                  = on
-z_min_probe_uses_z_min_endstop_pin       = off
+z_min_probe_uses_z_min_endstop_pin       = on
 auto_bed_leveling_bilinear               = on
 
 nozzle_to_probe_offset                   = {-43, -9, 1.000}
