refactor base.ini configuration for improved organization and clarity

--- a/Ender3-Pro/base.ini
+++ b/Ender3-Pro/base.ini
@@ -1,12 +1,13 @@
-ini_use_config                           = all
+[config:base]
+ini_use_config                          = all
 
 [config:minimal]
 motherboard                              = BOARD_BTT_SKR_MINI_E3_V2_0
 serial_port                              = 2
 baudrate                                 = 115200
 serial_port_2                            = -1
-custom_machine_name                      = Ender 3 Pro
-string_config_h_author                   = Euarctos
+custom_machine_name                      = "Ender 3 Pro"
+string_config_h_author                   = "(Euarctos, Marcus)" 
 
 x_driver_type                            = TMC2209
 y_driver_type                            = TMC2209
@@ -68,13 +69,16 @@ sdsupport                                = on
 individual_axis_homing_menu              = on
 cr10_stockdisplay                        = on
 
+sound_menu_item                          = on
+sound_on_default                         = off
 
 [config:bltouch]
 bltouch                                  = on
 z_min_probe_uses_z_min_endstop_pin       = on
+mesh_bed_leveling                        = off
 auto_bed_leveling_bilinear               = on
 
-nozzle_to_probe_offset                   = {-43, -9, 1.000}
+nozzle_to_probe_offset                   = {-43, -9, -2.9000}
 
 z_safe_homing                            = on
 homing_feedrate_mm_m                     = { (20*60), (20*60), (4*60) }
@@ -85,7 +89,7 @@ lcd_bed_tramming                         = on
 
 [config:filament_runout_sensor]
 filament_runout_sensor                   = on
-filament_runout_distance_mm              = 7
+filament_runout_distance_mm              = 25
 filament_motion_sensor                   = on
 nozzle_park_feature                      = on
 
