add preheat settings for PLA and PETG with temperature configurations

--- a/Ender3-Pro/base.ini
+++ b/Ender3-Pro/base.ini
@@ -59,11 +59,17 @@ extrapolate_beyond_grid                  = on
 eeprom_settings                          = on
 eeprom_auto_init                         = on
 
+preheat_1_label                          = "PLA"
 preheat_1_temp_hotend                    = 185
 preheat_1_temp_bed                       = 45
+preheat_1_temp_chamber                   = 35
 preheat_1_fan_speed                      = 255
 
-preheat_2_fan_speed                      = 255
+preheat_2_label                          = "PETG"
+preheat_2_temp_hotend                    = 240
+preheat_2_temp_bed                       = 70
+preheat_2_temp_chamber                   = 35
+preheat_2_fan_speed                      = 255  
 
 sdsupport                                = on
 individual_axis_homing_menu              = on
